--- a/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.html
+++ b/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.html
@@ -17,9 +17,9 @@
           <i class="ai-check me-2" *ngIf="currentSort=='nameAsc'"></i>
         </a>
         <a class="dropdown-item" style="cursor: pointer;" (click)="changeSort('nameDesc');$event.stopPropagation();">
-          <i class="ai-time me-2"></i>
+          <i class="ai-bar-chart-1 me-2"></i>
           Dans l'ordre anti-alphabétique
-          <i class="ai-bar-chart-1 me-2" *ngIf="currentSort=='nameDesc'"></i>
+          <i class="ai-check me-2" *ngIf="currentSort=='nameDesc'"></i>
         </a>
       </div>
     </div>
