end of first version of order creation

--- a/client-jss/src/app/main/components/header/header.component.css
+++ b/client-jss/src/app/main/components/header/header.component.css
@@ -30,3 +30,12 @@
 .header-area {
   background-color: white;
 }
+
+.custom-drop {
+  background-color: #1C2D41;
+}
+
+.dropdown-menu .dropdown-item:hover {
+  background-color: #CCE1FA;
+  color: #1C2D41;
+}
