--- a/client-myjss/src/app/modules/my-account/components/pay-order/pay-order.component.html
+++ b/client-myjss/src/app/modules/my-account/components/pay-order/pay-order.component.html
@@ -55,15 +55,15 @@
         <p>Pour payer par virement le montant de <strong>{{invoiceSummary.remainingToPay | currency:'EUR' }}</strong>,
           utilisez les
           informations suivantes :</p>
-        <p class="text-center">IBAN : {{JSS_IBAN}} <i style="cursor: pointer;" [copy-clipboard]="JSS_IBAN"
+        <p>IBAN : {{JSS_IBAN}} <i style="cursor: pointer;" [copy-clipboard]="JSS_IBAN.replaceAll(' ','')"
             (copied)="notifyCopied( )" class="ai-copy" data-bs-toggle="tooltip" data-bs-placement="right"
             title="Copier dans le presse-papier"></i></p>
-        <p class="text-center">BIC : {{JSS_BIC}} <i style="cursor: pointer;" [copy-clipboard]="JSS_BIC"
-            (copied)="notifyCopied( )" class="ai-copy" data-bs-toggle="tooltip" data-bs-placement="right"
-            title="Copier dans le presse-papier"></i></p>
+        <p>BIC : {{JSS_BIC}} <i style="cursor: pointer;" [copy-clipboard]="JSS_BIC" (copied)="notifyCopied( )"
+            class="ai-copy" data-bs-toggle="tooltip" data-bs-placement="right" title="Copier dans le presse-papier"></i>
+        </p>
         <div class="alert alert-danger" role="alert">
           Veuillez indiquer absolument la référence <span class="color-red">{{idOrder}}</span> <i
-            style="cursor: pointer;" [copy-clipboard]="JSS_BIC" (copied)="notifyCopied( )" class="ai-copy"
+            style="cursor: pointer;" [copy-clipboard]="idOrder+''" (copied)="notifyCopied( )" class="ai-copy"
             data-bs-toggle="tooltip" data-bs-placement="right" title="Copier dans le presse-papier"></i> de la commande
           dans le libellé de votre
           virement
