--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -5,9 +5,9 @@
 
     <div class="row mb-5">
       <!-- Show card with ngFor -->
-      <div *ngFor="let asso of quotation.assoAffaireOrders;let index = index" class="col-12 col-sm-6 col-lg-4 my-2">
+      <div *ngFor="let asso of quotation.assoAffaireOrders;let indexAsso = index" class="col-12 col-sm-6 col-lg-4 my-2">
         <div class="white-card card rounded-1 d-flex flex-column h-100 p-4 "
-          [ngClass]="{'selected': selectedAssoIndex == index}" (click)="selectCard(index, $event)">
+          [ngClass]="{'selected': selectedAssoIndex == indexAsso}" (click)="selectCard(indexAsso, $event)">
           <div class="row d-flex flex-row align-items-center">
             <i class="ai-briefcase col-1"></i>
             <h6 class="col m-0"> {{asso.affaire.siret?(asso.affaire.siret + ' - '):''}}{{
@@ -19,11 +19,11 @@
           <div class="row align-items-center" *ngIf="asso.services">
             <!-- Pill buttons -->
             <a *ngFor="let service of asso.services;let indexService = index"
-              (click)="selectServiceIndex(indexService, index!)"
-              [ngClass]="{'btn-secondary': index == selectedAssoIndex && indexService == selectedServiceIndex, 'btn-outline-primary': index != selectedAssoIndex || indexService != selectedServiceIndex}"
+              (click)="moveToService(indexService, indexAsso!)"
+              [ngClass]="{'btn-secondary': indexAsso == selectedAssoIndex && indexService == selectedServiceIndex, 'btn-outline-primary': indexAsso != selectedAssoIndex || indexService != selectedServiceIndex}"
               class="btn btn-secondary rounded-pill mt-2 ms-1 mt-md-3 ms-md-3 col-auto pill">
               {{service.serviceLabelToDisplay}}
-              <i *ngIf="index == selectedAssoIndex && indexService == selectedServiceIndex"
+              <i *ngIf="indexAsso == selectedAssoIndex && indexService == selectedServiceIndex"
                 class="ai-circle-arrow-right ms-2"></i>
             </a>
           </div>
@@ -268,15 +268,16 @@
   <div
     class="position-fixed bottom-0 start-0 w-100 bg-light shadow-sm p-3 m-0 d-flex justify-content-between align-items-center z-3">
     <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
-      (click)="moveToPreviousService()">
+      (click)="moveToService((selectedServiceIndex-1), selectedAssoIndex)"
+      *ngIf="selectedServiceIndex!=null && selectedAssoIndex!=null">
       <i class="ai-arrow-left"></i>
       <span class="d-none d-sm-inline ms-2">Étape précédente</span>
     </button>
 
-    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center" *ngIf="canSaveQuotation()"
-      (click)="saveFieldsValue()">
-      <span class="spinner-grow spinner-grow-sm me-2" *ngIf="isFetchingPrincing"></span><span
-        class="d-sm-inline me-2">Étape
+    <button type="button" class="btn btn-secondary rounded-1 mx-5 d-flex align-items-center"
+      *ngIf="canSaveQuotation() && selectedServiceIndex!=null && selectedAssoIndex!=null"
+      (click)="moveToService((selectedServiceIndex+1), selectedAssoIndex)">
+      <span class="spinner-grow spinner-grow-sm me-2" *ngIf="isSaving"></span><span class="d-sm-inline me-2">Étape
         suivante</span>
       <i class="ai-arrow-right"></i>
     </button>
