--- a/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/generic-select/generic-select.component.html
@@ -1,5 +1,5 @@
 <div class="full-width row" [formGroup]="form!">
-  <div class="select-wrapper pe-0">
+  <div class="select-wrapper">
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0"
       class="form-label">{{label}}</label>
     <select class="form-control " [formControlName]="propertyName" [id]="'fl-text'+uniqueId" [required]="isMandatory"
