--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -27,7 +27,7 @@
   firstStepTitle="Remplissez le bon de commande"
   firstStepDescription="Indiquez le type de document, le pays de destination et les éventuelles traductions."
   secondStepTitle="Envoyez les originaux"
-  secondStepDescription="Transmettez les documents originaux à cette adresse : JSS - Service Apostilles Légalisations, 10 Boulevard Haussmann, 75009 Paris"
+  secondStepDescription="Transmettez les documents originaux à cette adresse : <br/>JSS - Service Apostilles Légalisations, <br/>10 Boulevard Haussmann, <br/>75009 Paris"
   thirdStepTitle="Récupérez vos documents authentifiés"
   thirdStepDescription="Recevez vos documents selon les modalités que vous aurez précisées." [firstJumpTo]="5"
   [secondJumpTo]="15"></explaination-video>
@@ -40,12 +40,12 @@
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
+            <span class="text-blue opacity-70 me-2 practical-sheets-pre-border "></span>
             <span class="fs-xs fw-semibold text-blue text-uppercase">Apostilles et légalisation</span>
           </div>
           <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons orderActionLabel="Demander une apostille ou légalisation"
-            quotationActionLabel="Demander un devis" linkLabel="Lien vers l'outil" [isLightButtons]="false">
+            quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur" [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
@@ -69,7 +69,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
             <h3 class="h4 text-white">Assistance dédiée</h3>
-            <p class="mb-0">Nos équipes vous consiellent par téléphone ou
+            <p class="mb-0">Nos équipes vous conseillent par téléphone ou
               par mail à chaque étape.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -103,7 +103,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
+            <img src="assets/img/icons/charge_complete.svg" alt="Icon">
             <h3 class="h4 text-white">Prise en charge complète</h3>
             <p class="mb-0">Gestion du dépôt au retrait de vos apostilles et légalisations auprès des autorités
               compétentes.</p>
@@ -199,7 +199,7 @@
             En fonction du pays de destination et du type de document, nous réalisons la procédure adaptée et assurons
             un suivi rigoureux à chaque étape. <br><br>Notre service inclut également la traduction assermentée de vos
             documents administratifs, juridiques et
-            techniques, réalisée par des experts agrés pour une reconnaissance officielle en France et à
+            techniques, réalisée par des experts agréés pour une reconnaissance officielle en France et à
             l’international.<br><br>Avec MyJSS, simplifiez vos démarches et obtenez des documents conformes aux
             exigences
             légales, rapidement et
