--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -38,10 +38,11 @@
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue text-uppercase">Fourniture de document</span>
+            <span class="text-blue opacity-70 me-2 practical-sheets-pre-border"></span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase ">Fourniture de document</span>
           </div>
-          <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
+          <h2 class="h2 secondary-heading pb-2 pb-sm-3  ">N'attendez plus et accédez à nos
+            solutions</h2>
           <double-buttons orderActionLabel="Commander des documents" quotationActionLabel="Demander un devis"
             [isLightButtons]="false">
           </double-buttons>
