--- a/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
@@ -41,7 +41,7 @@
           <div class="card-body">
             <p class="text-grey">Etape 02</p>
             <h3 class="h4 card-title mt-0 text-white">{{secondStepTitle}}</h3>
-            <p class="card-text text-grey">{{secondStepDescription}}</p>
+            <p class="card-text text-grey" [innerHTML]="secondStepDescription"></p>
           </div>
         </div>
       </a>
