--- a/client-myjss/src/app/modules/general/components/contact/contact.component.html
+++ b/client-myjss/src/app/modules/general/components/contact/contact.component.html
@@ -126,7 +126,16 @@
             [form]="contactForm" propertyName="message" [isMandatory]="true" [isDisabled]="false" [maxLength]="250"
             [numberOfLines]="4"></generic-textarea>
         </div>
-
+        <div class="col-12">
+          <div class="form-check mb-4">
+            <input class="form-check-input" type="checkbox" id="cgv" [(ngModel)]="isConditionAccepted"
+              name="isConditionAccepted" required>
+            <label class="form-check-label" for="cgv">J’accepte d’être contacté.e par le Journal Spécial des
+              Sociétés
+              à des fins d’information et de marketing conformément à la Politique de Confidentialité*
+            </label>
+          </div>
+        </div>
         <div class=" col-sm-12 pt-5">
           <button class=" btn btn-lg btn-primary w-100" (click)="subscribeFormContact($event)">Envoyer ma
             demande</button>
