first version of view for podcasts and player

--- a/client-jss/src/assets/css/style.css
+++ b/client-jss/src/assets/css/style.css
@@ -13585,6 +13585,15 @@ ul.entry-comment .comment-content ul, ul.entry-comment .comment-content ol {
   justify-content: center;
 }
 
+.btn-circle-md {
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .header-hub-bg {
   background: #F6F9FC;
   min-height: 100px;
