--- a/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/double-buttons/double-buttons.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex flex-column flex-md-row">
-  <button type="button" (click)="openRoute($event)" class="btn me-3 mb-2 mb-md-0 rounded-1"
+  <button type="button" (click)="openRoute($event)" class="btn me-md-3 mb-2 mb-md-0 rounded-1"
     [ngClass]="isLightButtons ? 'btn-light': 'btn-secondary'">{{orderActionLabel}}
     <i class="ai-arrow-right ms-2"></i>
   </button>
