--- a/client-myjss/src/app/modules/miscellaneous/components/generic-testimonial/generic-testimonial.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/generic-testimonial/generic-testimonial.component.html
@@ -3,7 +3,7 @@
     <h2>Témoignages</h2>
   </div>
   <div class="row mb-0 align-items-start">
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4  ">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
@@ -18,7 +18,7 @@
         </div>
       </div>
     </div>
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
@@ -34,7 +34,7 @@
         </div>
       </div>
     </div>
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="row d-flex align-items-end">
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
@@ -64,7 +64,7 @@
         </div>
       </div>
     </div>
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
@@ -78,7 +78,7 @@
         </div>
       </div>
     </div>
-    <div class="h-auto col-4 d-flex flex-column">
+    <div class="h-auto col-lg-4 col-12 d-flex flex-column mb-lg-0 mb-4">
       <div class="card card-carousel border-0 rounded-4">
         <div class="card-body">
           <div class="d-flex align-items-center mb-4">
