--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -1,7 +1,7 @@
 <section class="container ">
   <div class="py-sm-3 py-md-4 py-lg-5 my-xxl-3">
     <div class="row pt-md-2 pt-lg-3 pt-xl-4 pb-lg-2 pb-xl-3">
-      <div class="col-md-6">
+      <div class="col-md-6" style="margin-top: -5px;">
         <h1 class="h1 pe-xxl-5 me-xl-4 mb-md-0 text-white">Votre domiciliation au coeur de Paris</h1>
       </div>
 
@@ -68,7 +68,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
+            <img src="assets/img/icons/prices_fixed.svg" alt="Icon">
             <h3 class="h4 text-white">Prix fixes et transparents</h3>
             <p class="mb-0">Domiciliation dès 80€ HT/mois.</p>
           </div>
@@ -80,7 +80,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
+            <img src="assets/img/icons/prestigious_image.svg" alt="Icon">
             <h3 class="h4 text-white">Image prestigieuse</h3>
             <p class="mb-0">Une adresse dans le quartier d’affaires Haussmann pour valoriser votre entreprise.</p>
           </div>
@@ -93,7 +93,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/attestation_immediate.svg" alt="Icon">
+            <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
             <h3 class="h4 text-white">Expertise reconnue</h3>
             <p class="mb-0">Choisissiez le JSS, un acteur de confiance.</p>
           </div>
@@ -106,7 +106,7 @@
       <div class="col">
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
-            <img src="assets/img/icons/Tarifs_avantageux.svg" alt="Icon">
+            <img src="assets/img/icons/fiscal_advantages.svg" alt="Icon">
             <h3 class="h4 text-white">Avantages fiscaux</h3>
             <p class="mb-0">Un taux de CFE parmi les plus bas de France (16,5% contre 31% en moyenne).</p>
           </div>
