--- a/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
+++ b/client-myjss/src/app/modules/my-services/components/explaination-video/explaination-video.component.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="col-sm-6 col-lg-4 order-lg-1">
-      <a class="card card-top border-0 h-100 text-decoration-none " style="cursor: pointer; "
+      <a class="card border-0 h-100 text-decoration-none " style="cursor: pointer; " [ngClass]="{'card-top':!isMobile}"
         (click)="jumpTo( firstJumpTo)">
         <div class="card border-0 h-100 py-lg-2 py-xl-4">
           <div class="card-body ">
