--- a/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
+++ b/client-myjss/src/app/modules/profile/components/top-bar/top-bar.component.html
@@ -49,8 +49,7 @@
         </div>
         <!-- User signed in state. Account dropdown on screens > 576px -->
         <div class="dropdown nav " *ngIf="currentUser && currentUser.id">
-          <a class="d-flex align-items-center p-0 user-account  dropdown-toggle" data-bs-toggle="dropdown"
-            aria-expanded="false">
+          <a class="d-flex align-items-center p-0 user-account" data-bs-toggle="dropdown" aria-expanded="false">
             <avatar class="avatar-select" [user]="currentUser" [size]="48"></avatar>
             <div class="ps-2 d-none d-md-block">
               <div class="fs-xs lh-1 opacity-60">Bonjour,</div>
@@ -97,7 +96,8 @@
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" data-bs-auto-close="outside"
                 aria-expanded="false">Services</a>
               <ul class="dropdown-menu">
-                <li *ngFor="let service of services"><a class="dropdown-item" [routerLink]="service.route">
+                <li *ngFor="let service of services"><a class="dropdown-item" [routerLink]="service.route"
+                    (click)="attempToCloseNavbar(true,null)">
                     {{service.label}}</a></li>
               </ul>
             </li>
@@ -105,26 +105,31 @@
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">La
                 société</a>
               <ul class="dropdown-menu">
-                <li *ngFor="let item of companyItems"><a class="dropdown-item" [routerLink]="item.route">
+                <li *ngFor="let item of companyItems"><a class="dropdown-item" [routerLink]="item.route"
+                    (click)="attempToCloseNavbar(true,null)">
                     {{item.label}}</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown col col-md-auto">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">Outils</a>
               <ul class="dropdown-menu">
-                <li *ngFor="let tool of tools"><a class="dropdown-item" [routerLink]="tool.route">
+                <li *ngFor="let tool of tools"><a class="dropdown-item" [routerLink]="tool.route"
+                    (click)="attempToCloseNavbar(true,null)">
                     {{tool.label}}</a></li>
               </ul>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" [routerLink]="'quotation/identification'">Commande /
+              <a class="nav-link " style="cursor: pointer;" [routerLink]="'quotation/identification'"
+                (click)="attempToCloseNavbar(true,null)">Commande /
                 Devis</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'">Démo</a>
+              <a class="nav-link " style="cursor: pointer;" [routerLink]="'demo'"
+                (click)="attempToCloseNavbar(true,null)">Démo</a>
             </li>
             <li class="nav-item col col-md-auto">
-              <a class="nav-link " style="cursor: pointer;" [routerLink]="'contact'">Contact</a>
+              <a class="nav-link " style="cursor: pointer;" [routerLink]="'contact'"
+                (click)="attempToCloseNavbar(true,null)">Contact</a>
             </li>
             <li class="nav-item col col-md-auto">
               <a class="nav-link " style="cursor: pointer;" (click)="$event">Journal Spécial des
