--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -40,6 +40,24 @@
             </div>
           </div>
         </div>
+        <div class="d-flex align-items-center mb-4" *ngIf="userScope && userScope.length>1 && currentUser">
+          <div class="ms-auto">
+            <div class="btn-group dropdown" style="margin-right: 10px;">
+              <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+                <i class="ai-briefcase me-2"></i>
+                {{capitalizeName(currentUser.firstname+ ' '+currentUser.lastname)}}
+              </button>
+              <div class="dropdown-menu my-1">
+                <label class=" dropdown-item" *ngFor="let scope of userScope">
+                  <a class="dropdown-item" style="cursor: pointer;" (click)="changeCurrentUser(scope) ">
+                    {{capitalizeName(scope.firstname+ ' '+scope.lastname)}}
+                  </a>
+                </label>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <!-- Quick message -->
         <div class="row"
