--- a/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
+++ b/client-myjss/src/app/modules/quotation/components/identification/identification.component.html
@@ -197,8 +197,8 @@
           <div class="row mb-3">
             <div class="col-md-4">
               <generic-input [(model)]="quotation.assoAffaireOrders[indexAsso].affaire.postalCode" label="Code postal"
-                [form]="idenficationForm" [propertyName]="'postalCode'+indexAsso" [isMandatory]="true"
-                [isDisabled]="false" [maxLength]="10">
+                (onFormBlur)="findCity(indexAsso)" [form]="idenficationForm" [propertyName]="'postalCode'+indexAsso"
+                [isMandatory]="true" [isDisabled]="false" [maxLength]="10">
               </generic-input>
             </div>
             <div class="col-md-4">
